# go2gg

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/go2gg/: __init__.py  client.py  exceptions.py  payloads.py  types.py
src/go2gg/resources/: __init__.py  links.py
tests/: TEST_CASES.md  test_client_errors.py  test_links_api.py  test_models.py  test_payloads.py  test_retries_and_timeouts.py
