[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go2gg"
version = "0.1.0"
description = "Async Python SDK for the go2.gg Links API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "go2gg python library contributors" }]
keywords = ["go2.gg", "go2gg", "links", "shortener", "sdk", "async", "aiohttp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.8",
  "typing-extensions>=4.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "coverage[toml]>=7",
  "ruff>=0.4",
  "mypy>=1.8",
  "aioresponses>=0.7",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.package-data]
go2gg = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "aioresponses"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["go2gg"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
omit = ["tests/*"]

[tool.bandit]
exclude_dirs = ["tests"]
